# grip-grab

./: Cargo.toml  README.md  TODO.md
assets/themes/: gruvbox-dark.tmTheme
src/: app.rs  cli.rs  fs.rs  int.rs  keys.rs  logging.rs  main.rs  printer.rs  search.rs  term.rs  ui.rs  upgrade.rs  utils.rs
src/cli/: cli.rs
src/fs/: fs.rs
src/int/: app.rs  editor.rs  highlighting.rs  icons.rs  input.rs  keys.rs  ui.rs
src/int/input/: backend.rs
src/printer/: printer.rs
src/upgrade/: upgrade.rs
src/utils/: highlighting.rs  strings.rs
