[package]
name = "grip-grab"
version = "0.2.8"
edition = "2021"
authors = ["Alexandre Pasmantier <alex.pasmant@gmail.com>"]
license = "Apache-2.0"
description = "A faster, more lightweight ripgrep alternative."
readme = "README.md"
homepage = "https://github.com/alexpasmantier/grip-grab"
repository = "https://github.com/alexpasmantier/grip-grab"
keywords = ["cli", "search", "grep", "ripgrep", "rust"]
categories = [
  "command-line-utilities",
  "command-line-interface",
  "concurrency",
  "development-tools",
]


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
grep = "0.3.1"
ignore = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
termcolor = "1.4.1"

[[bin]]
name = "gg"
path = "src/main.rs"
