[package]
name = "grip-grab"
version = "0.5.6"
edition = "2021"
authors = ["Alexandre Pasmantier <alex.pasmant@gmail.com>"]
license = "Apache-2.0"
description = "A faster, more lightweight ripgrep alternative."
readme = "README.md"
homepage = "https://github.com/alexpasmantier/grip-grab"
repository = "https://github.com/alexpasmantier/grip-grab"
keywords = ["cli", "search", "grep", "ripgrep", "rust"]
categories = [
  "command-line-utilities",
  "command-line-interface",
  "concurrency",
  "development-tools",
]


[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
devicons = "0.6.7"
grep = "0.3.1"
ignore = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
termcolor = "1.4.1"
thiserror = "1.0.64"

[[bin]]
name = "gg"
path = "src/main.rs"


[features]
default = []
upgrade = []

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
